# microservice-checksum

./: Cargo.toml
src/: lib.rs
