[package]
name = "microservice-checksum"
description = "An HTTP microservice that checksums its inputs."
tags = ["crc", "http", "microservice"]
version = "0.1.0"
authors = ["Tim McNamara <tim.mcnamara@canonical.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
crc = "^1.0.0"
rocket = "0.5.0-rc.1"
shuttle-service = { version = "0.2", features = ["web-rocket"] }
#serde = "1.0"
#serde_json = "1.0"
#serde_derive = "1.0"
#json = "0.11"
#env_logger = "0.6"

[badges]
maintenance = { status = "actively-maintained" }

[profile.release]
lto = true
codegen-units = 4
debug-assertions = true
linker-plugin-lto = true